fix spacing

--- a/client/assets/styles/scss/pages/landing.scss
+++ b/client/assets/styles/scss/pages/landing.scss
@@ -106,7 +106,7 @@
   color: $white;
   font-size: 19px;
   font-weight: 300;
-  margin: 0;
+  margin: 9px 0 0;
   text-align: center;
 
   @include media(xs) {
